--- a/index.html
+++ b/index.html
@@ -4,9 +4,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>João Vitor</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <title>João Vitor Portofolio</title>
 </head>
 <body>
-    
+    <header>
+        <h3>João <strong>Vitor</strong></h3>
+    </header>
+    <main>
+        <section>
+            <article>
+                <h2>Olá eu sou o João</h2>
+                <h1>faço sites <strong>legais</strong>
+                </h1>
+            </article>
+            <p>Contato : contatojoaovitorcardoso@outlook.com</p>
+            <div>
+                <h3>Siga-me</h3>
+                <a href="https://github.com/cardosojoaovt" target="_blank">
+                    <img src="assets/github.svg" alt="Logo do github">
+                </a>
+                <a href="https://www.instagram.com/cardosojoaovt/" target="_blank">
+                    <img src="assets/instagram.svg" alt="Logo do instagram">
+                </a>
+            </div>
+        </section>
+        <section>
+            <h1>Projetos</h1>
+            <ul>
+                <li></li>
+                <li></li>
+            </ul>
+        </section>
+        <section>
+            <h1>Stack</h1>
+            <ul>
+                <li><img src="/assets/html.svg" alt="Imagem do HTML"></li>
+                <li><img src="/assets/css.svg" alt="Imagem do CSS"></li>
+            </ul>
+        </section>
+    </main>
+    <footer><h3>João Vitor | 2024</h3></footer>
 </body>
 </html>
